objects/IP_Request__c.object
<CustomObject>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.010UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.086UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.152UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.17UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
                <value>
                    <fullName>0.40UM</fullName>
                </value>
                <value>
                    <fullName>0.45UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Technology_Dependencies_been_address__c</fullName>
        <label>Has Technology Dependencies been address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height_Io__c</fullName>
        <label>Height IO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Um__c</fullName>
        <label>Height Logic(um)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hs_Fs_Ls_Usb__c</fullName>
        <label>HS FS LS USB</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INL__c</fullName>
        <label>INL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Feature__c</fullName>
        <description>IP Feature</description>
        <inlineHelpText>IP Feature</inlineHelpText>
        <label>IP Feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IP_ITAR_Compliant__c</fullName>
        <label>IP ITAR Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Information_Comment__c</fullName>
        <description>Overall Comments</description>
        <inlineHelpText>Overall Comments</inlineHelpText>
        <label>Comment on New IP Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IP_Name__c</fullName>
        <description>IP Name</description>
        <inlineHelpText>IP Name</inlineHelpText>
        <label>IP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Request_Description__c</fullName>
        <label>IP Request Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_Request_Restriction__c</fullName>
        <label>IP Request Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Request_Status__c</fullName>
        <label>IP Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Change Control</fullName>
                </value>
                <value>
                    <fullName>Bid Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Pending Brand Finance</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Conditional Approval</fullName>
                </value>
                <value>
                    <fullName>Fall Plan</fullName>
                </value>
                <value>
                    <fullName>Move to Development</fullName>
                </value>
                <value>
                    <fullName>No Development Required</fullName>
                </value>
                <value>
                    <fullName>Development Complete</fullName>
                </value>
                <value>
                    <fullName>Exception Bid</fullName>
                </value>
                <value>
                    <fullName>Executive Forum</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Sub_type__c</fullName>
        <label>IP Sub type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analog</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>eDRAM</fullName>
                </value>
                <value>
                    <fullName>Image/Package</fullName>
                </value>
                <value>
                    <fullName>LBIST</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Memory</fullName>
                </value>
                <value>
                    <fullName>Methodology</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <label>IP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
                <value>
                    <fullName>Memory</fullName>
                </value>
                <value>
                    <fullName>PHY</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITAR_Compliant__c</fullName>
        <label>ITAR Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITAR_Instructions__c</fullName>
        <label>ITAR Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improved_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What type of New IP Request created?</description>
        <inlineHelpText>What type of New IP Request created?</inlineHelpText>
        <label>Improved Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Assessment_T__c</fullName>
        <label>Initial Assessment (T)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Assessment__c</fullName>
        <label>Initial Assessment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Assessment_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Assessment by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inline_Or_Staggered__c</fullName>
        <label>Inline Or Staggered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Voltage_V__c</fullName>
        <label>Input Voltage(V)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Stage__c</fullName>
        <label>Internal Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted to GF</fullName>
                </value>
                <value>
                    <fullName>Under FAE Review</fullName>
                </value>
                <value>
                    <fullName>Under AM Review</fullName>
                </value>
                <value>
                    <fullName>Initial Assessment</fullName>
                </value>
                <value>
                    <fullName>Under PLM Assessment</fullName>
                </value>
                <value>
                    <fullName>Approved for Sizing</fullName>
                </value>
                <value>
                    <fullName>Sizing Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Provided Options</fullName>
                </value>
                <value>
                    <fullName>Business Approval</fullName>
                </value>
                <value>
                    <fullName>Under Implementation</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Released &amp; Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected &amp; Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List__c</fullName>
        <description>List of Non-Standard PVTs</description>
        <inlineHelpText>List of Non-Standard PVTs</inlineHelpText>
        <label>List of Non-Standard PVTs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Load_Current__c</fullName>
        <label>Load Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_for_Test_Chip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPW for Test Chip</label>
        <referenceTo>MPW_Train_Maintenance__c</referenceTo>
        <relationshipLabel>IP Requests (MPW for Test Chip)</relationshipLabel>
        <relationshipName>IP_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>M_ARB_Complate_Actual_Date__c</fullName>
        <label>M-ARB Complate (Actual Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_ARB_Complete_Target_Date__c</fullName>
        <label>M-ARB Complete (Target Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_ARB_Complete__c</fullName>
        <label>M-ARB Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_ARB_Started__c</fullName>
        <label>M-ARB Started</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Asic_Sizing_By_New__c</fullName>
        <label>M-Asic Sizing By (New)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Asic_Sizing_By_View__c</fullName>
        <label>M-Asic Sizing By (View)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Attachments__c</fullName>
        <label>M-Attachments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Audit_Status__c</fullName>
        <label>M-Audit Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Audit__c</fullName>
        <label>M-Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Authorization__c</fullName>
        <label>M-Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Awaiting_Approval_Flag__c</fullName>
        <label>M-Awaiting Approval Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_BLM__c</fullName>
        <label>M-BLM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Brand_Authorization_to_Bid__c</fullName>
        <label>M-Brand Authorization to Bid</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_CC_Date__c</fullName>
        <label>M-CC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_CC_Flag__c</fullName>
        <label>M-CC Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_CC_Reject__c</fullName>
        <label>M-CC Reject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_CC_Resize__c</fullName>
        <label>M-CC Resize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Captured_Status_at_PostOpen__c</fullName>
        <label>M-Captured Status at PostOpen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Conditional__c</fullName>
        <label>M-Conditional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Contract_Complate_Actual_Date__c</fullName>
        <label>M-Contract Complate (Actual Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Contract_Complate_Target_Date__c</fullName>
        <label>M-Contract Complate (Target Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Contract_Complete__c</fullName>
        <label>M-Contract Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Contract_Started__c</fullName>
        <label>M-Contract Started</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Copy__c</fullName>
        <label>M-Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Created_By__c</fullName>
        <label>M-Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Created_Date__c</fullName>
        <label>M-Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Customer_Chip_Project__c</fullName>
        <label>M-Customer Chip/Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Customer_Tier__c</fullName>
        <label>M-Customer Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Customer_s__c</fullName>
        <label>M-Customer(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_AllM_DIW_All__c</fullName>
        <label>M-DIW All</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_Customer__c</fullName>
        <label>M-DIW Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_Inactive_Note_Sent__c</fullName>
        <label>M-DIW Inactive (Note Sent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_Inactive__c</fullName>
        <label>M-DIW Inactive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_Opportunity__c</fullName>
        <label>M-DIW Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_Option__c</fullName>
        <label>M-DIW Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_DIW_Options_2__c</fullName>
        <label>M-DIW Options (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Date_Status_as_Closed__c</fullName>
        <label>M-Date Status as Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>M_Date__c</fullName>
        <label>M-Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>M_Define_Requirements__c</fullName>
        <label>M-Define Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Development__c</fullName>
        <label>M-Development</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Doc_Author__c</fullName>
        <label>M-Doc Author</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Dwsent__c</fullName>
        <label>M-Dwsent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Edit_Doc_Author__c</fullName>
        <label>M-Edit Doc Author</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Evaluate_Suppliers__c</fullName>
        <label>M-Evaluate Suppliers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Evaluator_BLM__c</fullName>
        <label>M-Evaluator BLM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Evaluator_Roadmap__c</fullName>
        <label>M-Evaluator Roadmap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Evaluator_WWFDC__c</fullName>
        <label>M-Evaluator WWFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Exception__c</fullName>
        <label>M-Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Executive_Forum__c</fullName>
        <label>M-Executive Forum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Expiration_Flag__c</fullName>
        <label>M-Expiration Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Final_Models_Required__c</fullName>
        <label>M-Final Models Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Flag__c</fullName>
        <label>M-Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Form_Name__c</fullName>
        <label>M-Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Foundry_Quality_Level__c</fullName>
        <label>M-Foundry Quality Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Highrisk__c</fullName>
        <label>M-Highrisk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_IPR_Questionnaire__c</fullName>
        <label>M-IPR Questionnaire</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_IP_Request_Restriction__c</fullName>
        <label>M-IP Request Restriction</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Inactive__c</fullName>
        <label>M-Inactive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Initial_BE_Models_Required__c</fullName>
        <label>M-Initial BE Models Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Initial_FE_Models_Required__c</fullName>
        <label>M-Initial FE Models Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Inprocess_Date__c</fullName>
        <label>M-Inprocess Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>M_Inprocess_Flag__c</fullName>
        <label>M-Inprocess Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Is_Opportunity_ITAR__c</fullName>
        <label>M-Is Opportunity ITAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Loss__c</fullName>
        <label>M-Loss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Marketing__c</fullName>
        <label>M-Marketing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Markets__c</fullName>
        <label>M-Markets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_NOTEID__c</fullName>
        <label>M-NOTEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_No_Bid__c</fullName>
        <label>M-No Bid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Notification_Sent_Date__c</fullName>
        <label>M-Notification Sent (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M_Notification_Sent__c</fullName>
        <label>M-Notification Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Notification__c</fullName>
        <label>M-Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Old_Company__c</fullName>
        <label>M-Old Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Old_MDParts_Name__c</fullName>
        <label>M-Old MDParts Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Old_Project__c</fullName>
        <label>M-Old Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Opportunity_Number__c</fullName>
        <label>M-Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Opportunity_Schedule__c</fullName>
        <label>M-Opportunity Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Option_Number__c</fullName>
        <label>M-Option Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_OriginalModTime__c</fullName>
        <label>M-OriginalModTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Originator__c</fullName>
        <label>M-Originator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Other_Technology__c</fullName>
        <label>M-Other Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_PDT_1__c</fullName>
        <label>M-PDT_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_PDT__c</fullName>
        <label>M-PDT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Parent_Created__c</fullName>
        <label>M-Parent Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Potential_Customer_s__c</fullName>
        <label>M-Potential Customer(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Potential_Markets__c</fullName>
        <label>M-Potential Markets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Potential_Revenue__c</fullName>
        <label>M-Potential Revenue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Potential_Source__c</fullName>
        <label>M-Potential Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Presentation__c</fullName>
        <label>M-Presentation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_RFI_Only__c</fullName>
        <label>M-RFI Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_RTX_Milestones__c</fullName>
        <label>M-RTX Milestones</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Reader_Restricted__c</fullName>
        <label>M-Reader Restricted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Reason_for_Post_Win_Request__c</fullName>
        <label>M-Reason for Post-Win Request</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Reqnumber__c</fullName>
        <label>M-Reqnumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Response_from_Past_Due_Notification__c</fullName>
        <label>M-Response from Past-Due Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Restriction__c</fullName>
        <label>M-Restriction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Restrictions__c</fullName>
        <label>M-Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Revenue__c</fullName>
        <label>M-Revenue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Rfs_Rfq_Number__c</fullName>
        <label>M-Rfs_Rfq_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Roadmap_Investor_2__c</fullName>
        <label>M-Roadmap Investor (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Roadmap_Investor__c</fullName>
        <label>M-Roadmap Investor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Roadmap_Owner__c</fullName>
        <label>M-Roadmap Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Save_Options__c</fullName>
        <label>M-Save Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Sized_By_View__c</fullName>
        <label>M-Sized By (View)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Special_Requirements_includes_SER_Req__c</fullName>
        <label>M-Special Requirements (includes SER Req</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Standards__c</fullName>
        <label>M-Standards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Status_View_2__c</fullName>
        <label>M-Status View 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Status_View_3__c</fullName>
        <label>M-Status View 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Status_View__c</fullName>
        <label>M-Status_View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Temp_Field__c</fullName>
        <label>M-Temp Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Temp_YesNo__c</fullName>
        <label>M-Temp (YesNo)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Third_Party__c</fullName>
        <label>M-Third Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Title__c</fullName>
        <label>M-Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Vendor_Contract__c</fullName>
        <label>M-Vendor Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Vendor_RFQ__c</fullName>
        <label>M-Vendor RFQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Vendor__c</fullName>
        <label>M-Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Weekly_Status__c</fullName>
        <label>M-Weekly Status</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_Will_IP_be_used_by_IBM_Server_Group__c</fullName>
        <label>M-Will IP be used by IBM Server Group?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Work_Required__c</fullName>
        <label>M-Work Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_dcpattachments__c</fullName>
        <label>M-dcpattachments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M_marketsubsegment__c</fullName>
        <label>M-marketsubsegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>